name:                boat
version:             0.1.0.0
synopsis:            The reference compiler for the Boat programming language
-- description:
license:             BSD3
license-file:        LICENSE
author:              Scott Taylor
maintainer:          scott11x8@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable boat
  ghc-options:         -Wunused-imports
  main-is:             Main.hs
  other-modules:       Utility.Basics,
                       Utility.ErrorPrint,
                       Utility.TopSort,
                       Utility.AST,
                       Utility.Program,
                       Utility.Parser,
                       Pass.Parser,
                       Pass.NameResolve,
                       Pass.AssocOps
  default-extensions:  FlexibleContexts,
                       FlexibleInstances,
                       NamedFieldPuns,
                       RecordWildCards,
                       RecursiveDo,
                       OverloadedStrings,
                       PatternSynonyms,
                       LambdaCase,
                       KindSignatures,
                       Rank2Types,
                       MultiParamTypeClasses,
                       ScopedTypeVariables,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable
  build-depends:       base >=4.9,
                       megaparsec >=7.0,
                       containers >=0.6,
                       mtl >=2.2,
                       transformers >=0.5,
                       text >=1.2,
                       ansi-terminal >=0.9,
                       haskeline >=0.7,
                       filepath >=1.4,
                       directory >=1.3,
                       optparse-applicative >=0.15
  hs-source-dirs:      src
  default-language:    Haskell2010
