name:                boat
version:             0.1.0.0
synopsis:            The reference compiler for the Boat programming language
-- description:
license:             BSD3
license-file:        LICENSE
author:              Scott Taylor
maintainer:          scott11x8@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable boat
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-unused-top-binds
  main-is:             Main.hs
  other-modules:       Utility.Basics,
                       Utility.TopSort,
                       Utility.ErrorPrint,
                       Utility.AST,
                       Utility.Program,
                       Utility,
                       Parse.Primitives,
                       Parse.Expression,
                       Parse.Module,
                       Parse,
                       Analyze.NameResolve,
                       Analyze.AssocOps
                       Analyze.InferVariance,
                       Analyze.InferTypes
                       Analyze
  default-extensions:  FlexibleContexts,
                       FlexibleInstances,
                       FunctionalDependencies,
                       NamedFieldPuns,
                       RecordWildCards,
                       RecursiveDo,
                       BlockArguments,
                       OverloadedStrings,
                       PatternSynonyms,
                       LambdaCase,
                       KindSignatures,
                       Rank2Types,
                       MultiParamTypeClasses,
                       GeneralizedNewtypeDeriving,
                       UndecidableInstances,
                       StandaloneDeriving,
                       ScopedTypeVariables,
                       ConstraintKinds,
                       ViewPatterns,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       DeriveGeneric
  build-depends:       base >=4.9,
                       megaparsec >=8.0,
                       containers >=0.6,
                       mtl >=2.2,
                       transformers >=0.5,
                       text >=1.2,
                       ansi-terminal >=0.9,
                       haskeline >=0.7,
                       filepath >=1.4,
                       directory >=1.3,
                       optparse-applicative >=0.15,
                       edit-distance >=0.2,
                       unordered-containers >=0.2.11,
                       hashable >=1.0.1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
